infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra
  namespace: default
  labels:
    app: infra
spec:
  type: ClusterIP
  selector:
    app: infra
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
